# ESPRIT-BLACKBOARD-ARCHIVER

./: .gitignore  README.md  backup.py  bb_archive_task.md  blackboard.py  esprit_blackboard_downloader.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: archive.yml
site/: index.html
site/src/: main.ts  styles.css
src/bb_archive/: __init__.py  __main__.py  auth.py  class_codes.py  cli.py  client.py  html.py  scraper.py  storage.py
tests/: test_auth.py  test_class_codes.py  test_client.py  test_html.py  test_scraper_modes.py  test_storage.py
