[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esprit-blackboard-archiver"
version = "0.1.0"
description = "Async static archiver for ESPRIT Blackboard data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]

[project.scripts]
bb-archive = "bb_archive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
